Fix minor errors

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blinkit_assigment",
+  "name": "secureBlink_assigment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
